My Resume UI - CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
         working-directory: ./my-resume-ui
         run: |
           echo Install UI.
-          npm install
+          npm install --legacy-peer-deps
