--- a/my-resume-ui/package.json
+++ b/my-resume-ui/package.json
@@ -11,9 +11,11 @@
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "check-types": "^11.1.2",
     "js-yaml": "^4.1.0",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
