My Resume UI - CI. Add IaC. Build and deploy.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,36 +15,26 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-    # The type of runner that the job will run on
+  ui:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v2
+      - uses: aws-actions/setup-sam@v1
+      - uses: aws-actions/configure-aws-credentials@v1
       - uses: actions/setup-node@v3
         with:
-          node-version: 17.x
-
-      - name: Install UI
+          node-version: 16.x
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+      # sam build
+      - name: Build
         working-directory: ./my-resume-ui
         run: |
           echo Install UI.
           npm install --legacy-peer-deps
           npm run build
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - uses: aws-actions/setup-sam@v1
-      - uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
-      # sam build
-      - name: Build IAC
+      - name: Deploy
         working-directory: ./my-resume-ui
         run: aws sync build s3://www.resume.adolha.com
