My Resume UI - CI. Add IaC. Build and deploy.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,15 +19,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v2
-      - uses: aws-actions/setup-sam@v1
-      - uses: aws-actions/configure-aws-credentials@v1
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
       # sam build
       - name: Build
         working-directory: ./my-resume-ui
@@ -35,6 +29,14 @@ jobs:
           echo Install UI.
           npm install --legacy-peer-deps
           npm run build
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v2
+      - uses: aws-actions/setup-sam@v1
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
       - name: Deploy
         working-directory: ./my-resume-ui
         run: aws sync build s3://www.resume.adolha.com
