--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
           aws-region: eu-central-1
       - name: Deploy
         working-directory: ./my-resume-ui
-        run: aws sync build s3://www.resume.adolha.com
+        run: aws s3 sync build s3://www.resume.adolha.com
