My Resume UI - Download PDF

--- a/my-resume-ui/public/manifest.json
+++ b/my-resume-ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "My Resume",
-  "name": "Create your resume",
+  "name": "My Resume",
   "icons": [
     {
       "src": "favicon.ico",
