My Resume UI - Small updates.

--- a/my-resume-ui/public/manifest.json
+++ b/my-resume-ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "My Resume",
-  "name": "My Resume",
+  "short_name": "Adrian Dolha",
+  "name": "Adrian Dolha",
   "icons": [
     {
       "src": "favicon.ico",
