--- a/my-resume-ui/package.json
+++ b/my-resume-ui/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
     "check-types": "^11.1.2",
     "js-yaml": "^4.1.0",
     "jspdf": "^2.5.1",
